<resources>
    <string name="tfe_pe_app_name">TFL Pose Estimation</string>
    <string name="tfe_pe_request_permission">This app needs camera permission.</string>
    <string name="tfe_pe_tv_score">Score: %.2f</string>
    <string name="tfe_pe_tv_model">Model: </string>
    <string name="tfe_pe_tv_fps">Fps: %d</string>
    <string name="tfe_pe_tv_device">Device: </string>
    <string name="tfe_pe_tv_classification_value">- %s</string>
    <string name="tfe_pe_tv_pose_classification">Pose Classification</string>
    <string name="tfe_pe_tv_tracking">Tracker: </string>
    <string name="tfe_pe_gpu_error">Movenet MultiPose does not support GPU. Fallback to CPU.</string>
    <string-array name="tfe_pe_models_array">
        <item>Movenet Lightning</item>
        <item>Movenet Thunder</item>
        <item>Movenet MultiPose</item>
        <item>Posenet</item>
    </string-array>

    <string-array name="tfe_pe_device_name">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="tfe_pe_tracker_array">
        <item>Off</item>
        <item>BoundingBox</item>
        <item>Keypoint</item>
    </string-array>

    <string name="app_name">MoveUp</string>
    <string name="title_home">홈</string>
    <string name="title_dailylog">일지</string>
    <string name="title_statistics">통계</string>

    <string name="workout_list">오늘의 운동</string>
    <string name="workout_intensity"> 운동 강도</string>
    <string name="workout_symptoms">운동 후 증상</string>
    <string name="measure_length">신체 길이 재측정</string>
    <string name="resetDB">일지 및 기록 초기화</string>
    <string name="dailyQuest">일일 퀘스트</string>
</resources>
