<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app2:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_dailylog"
        android:name="org.tensorflow.lite.examples.poseestimation.ui.dailylog.DailylogFragment"
        android:label="@string/title_dailylog"
        tools:layout="@layout/fragment_dailylog" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.tensorflow.lite.examples.poseestimation.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_statistic"
        android:name="org.tensorflow.lite.examples.poseestimation.ui.statistic.StatisticFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />
</navigation>