<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="dailylog"
            type="org.tensorflow.lite.examples.poseestimation.ui.dailylog.DailylogFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.dailylog.DailylogFragment">

        <LinearLayout
            android:id="@+id/DateLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-43dp">

            <TextView
                android:id="@+id/textToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:text="4"
                android:textAlignment="center"
                android:textSize="34sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textWorkoutList"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/workout_list"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DateLayout" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="181dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textWorkoutList"></LinearLayout>

        <TextView
            android:id="@+id/textWorkoutIntensity"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/workout_intensity"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="408dp"
            android:layout_height="102dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textWorkoutIntensity">

        </LinearLayout>

        <TextView
            android:id="@+id/textWorkoutIntensity2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/workout_symptoms"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:layout_width="407dp"
            android:layout_height="381dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textWorkoutIntensity2"></LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>